--- a/main.ipynb
+++ b/main.ipynb
@@ -66,7 +66,9 @@
     "        num_workers=NUM_WORKERS,\n",
     "        shuffle=False)\n",
     "    \n",
-    "    return train_dataloader, test_dataloader"
+    "    class_names = train_data.classes\n",
+    "    \n",
+    "    return train_dataloader, test_dataloader, class_names"
    ]
   },
   {
