training_engine.py

--- a/main.ipynb
+++ b/main.ipynb
@@ -22,10 +22,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing modules/data_preprocessing.py\n"
+     ]
+    }
+   ],
    "source": [
+    "%%writefile modules/data_preprocessing.py\n",
     "import os\n",
     "from torchvision import datasets, transforms\n",
     "from torch.utils.data import DataLoader\n",
@@ -98,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,6 +128,131 @@
     "                                                                               transform=data_transform,\n",
     "                                                                               batch_size=32\n",
     "                                                                               )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing modules/build_model.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile modules/build_model.py\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "\n",
+    "class ModelName(nn.Module):\n",
+    "    def __init(self):\n",
+    "        super().__init__()\n",
+    "        \n",
+    "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
+    "        x = None\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Tuple, Dict, List\n",
+    "import torch\n",
+    "from tqdm.auto import tqdm\n",
+    "  \n",
+    "def train_step(model: torch.nn.Module, \n",
+    "            dataloader: torch.utils.data.DataLoader, \n",
+    "            loss_fn: torch.nn.Module, \n",
+    "            optimizer: torch.optim.Optimizer,\n",
+    "            device: torch.device) -> Tuple[float, float]:\n",
+    "  \n",
+    "  model.train()\n",
+    "  train_loss, train_acc = 0, 0\n",
+    "\n",
+    "  for batch, (X, y) in enumerate(dataloader):\n",
+    "\n",
+    "      X, y = X.to(device), y.to(device)\n",
+    "      y_pred = model(X)\n",
+    "      loss = loss_fn(y_pred, y)\n",
+    "      train_loss += loss.item() \n",
+    "      optimizer.zero_grad()\n",
+    "      loss.backward()\n",
+    "      optimizer.step()\n",
+    "      y_pred_class = torch.argmax(torch.softmax(y_pred, dim=1), dim=1)\n",
+    "      train_acc += (y_pred_class == y).sum().item()/len(y_pred)\n",
+    " \n",
+    "  train_loss = train_loss / len(dataloader)\n",
+    "  train_acc = train_acc / len(dataloader)\n",
+    "  return train_loss, train_acc\n",
+    "\n",
+    "def test_step(model: torch.nn.Module, \n",
+    "              dataloader: torch.utils.data.DataLoader, \n",
+    "              loss_fn: torch.nn.Module,\n",
+    "              device: torch.device) -> Tuple[float, float]:\n",
+    "    test_loss, test_acc = 0, 0\n",
+    "    model.eval() \n",
+    "\n",
+    "    with torch.inference_mode():\n",
+    "\n",
+    "        for batch, (X, y) in enumerate(dataloader):\n",
+    "\n",
+    "            X, y = X.to(device), y.to(device)\n",
+    "            test_pred_logits = model(X)\n",
+    "            loss = loss_fn(test_pred_logits, y)\n",
+    "            test_loss += loss.item()\n",
+    "            test_pred_labels = test_pred_logits.argmax(dim=1)\n",
+    "            test_acc += ((test_pred_labels == y).sum().item()/len(test_pred_labels))\n",
+    "            \n",
+    "    test_loss = test_loss / len(dataloader)\n",
+    "    test_acc = test_acc / len(dataloader)\n",
+    "    return test_loss, test_acc\n",
+    "\n",
+    "def train(model: torch.nn.Module, \n",
+    "          train_dataloader: torch.utils.data.DataLoader, \n",
+    "          test_dataloader: torch.utils.data.DataLoader, \n",
+    "          optimizer: torch.optim.Optimizer,\n",
+    "          loss_fn: torch.nn.Module,\n",
+    "          epochs: int,\n",
+    "          device: torch.device) -> Dict[str, List[float]]:\n",
+    "\n",
+    "  results = {\"train_loss\": [],\n",
+    "      \"train_acc\": [],\n",
+    "      \"test_loss\": [],\n",
+    "      \"test_acc\": []\n",
+    "  }\n",
+    "  \n",
+    "  for epoch in tqdm(range(epochs)):\n",
+    "      train_loss, train_acc = train_step(model=model,\n",
+    "                                          dataloader=train_dataloader,\n",
+    "                                          loss_fn=loss_fn,\n",
+    "                                          optimizer=optimizer,\n",
+    "                                          device=device)\n",
+    "      test_loss, test_acc = test_step(model=model,\n",
+    "          dataloader=test_dataloader,\n",
+    "          loss_fn=loss_fn,\n",
+    "          device=device)\n",
+    "      \n",
+    "      print(\n",
+    "          f\"Epoch: {epoch+1} | \"\n",
+    "          f\"train_loss: {train_loss:.4f} | \"\n",
+    "          f\"train_acc: {train_acc:.4f} | \"\n",
+    "          f\"test_loss: {test_loss:.4f} | \"\n",
+    "          f\"test_acc: {test_acc:.4f}\"\n",
+    "      )\n",
+    "\n",
+    "      results[\"train_loss\"].append(train_loss)\n",
+    "      results[\"train_acc\"].append(train_acc)\n",
+    "      results[\"test_loss\"].append(test_loss)\n",
+    "      results[\"test_acc\"].append(test_acc)\n",
+    "\n",
+    "  return results"
    ]
   }
  ],
