--- a/main.ipynb
+++ b/main.ipynb
@@ -2,9 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileExistsError",
+     "evalue": "[Errno 17] File exists: 'modules'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileExistsError\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[1;32m/home/stanley/Documents/shidder/ml/pytorching/pytorch_modules/main.ipynb Cell 1\u001b[0m line \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/stanley/Documents/shidder/ml/pytorching/pytorch_modules/main.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/stanley/Documents/shidder/ml/pytorching/pytorch_modules/main.ipynb#W0sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorchvision\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/stanley/Documents/shidder/ml/pytorching/pytorch_modules/main.ipynb#W0sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m os\u001b[39m.\u001b[39;49mmakedirs(\u001b[39m\"\u001b[39;49m\u001b[39mmodules\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
+      "File \u001b[0;32m<frozen os>:225\u001b[0m, in \u001b[0;36mmakedirs\u001b[0;34m(name, mode, exist_ok)\u001b[0m\n",
+      "\u001b[0;31mFileExistsError\u001b[0m: [Errno 17] File exists: 'modules'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import torch\n",
@@ -22,19 +35,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing modules/data_preprocessing.py\n"
+      "Overwriting modules/data_preprocess.py\n"
      ]
     }
    ],
    "source": [
-    "%%writefile modules/data_preprocessing.py\n",
+    "%%writefile modules/data_preprocess.py\n",
+    "\"\"\"\n",
+    "creates dataoaders from dir\n",
+    "\"\"\"\n",
     "import os\n",
     "from torchvision import datasets, transforms\n",
     "from torch.utils.data import DataLoader\n",
@@ -48,6 +64,18 @@
     "    batch_size: int,\n",
     "    num_workers: int = NUM_WORKERS\n",
     "):\n",
+    "    \"\"\"creates train and test dataloaders\n",
+    "\n",
+    "    Args:\n",
+    "        train_dir (str): _description_\n",
+    "        test_dir (str): _description_\n",
+    "        transform (transforms.Compose): _description_\n",
+    "        batch_size (int): _description_\n",
+    "        num_workers (int, optional): _description_. Defaults to NUM_WORKERS.\n",
+    "\n",
+    "    Returns:\n",
+    "        Tuple(train_dataloader, test_dataloader, class_names): _description_\n",
+    "    \"\"\"\n",
     "    train_data = datasets.ImageFolder(\n",
     "        root=train_dir,\n",
     "        transform=transform,\n",
@@ -82,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +120,7 @@
        " PosixPath('data/pizza_steak_sushi/test'))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +135,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torchvision import transforms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,11 +156,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dataloader, test_dataloader = create_dataloaders(train_dir=train_dir,\n",
+    "from modules.data_preprocess import create_dataloaders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataloader, test_dataloader, class_anmes = create_dataloaders(train_dir=train_dir,\n",
     "                                                                               test_dir=test_dir,\n",
     "                                                                               transform=data_transform,\n",
     "                                                                               batch_size=32\n",
@@ -132,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -161,8 +207,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing modules/train_engine.py\n"
+     ]
+    }
+   ],
    "source": [
+    "%%writefile modules/train_engine.py \n",
+    "\n",
     "from typing import Tuple, Dict, List\n",
     "import torch\n",
     "from tqdm.auto import tqdm\n",
@@ -253,6 +309,155 @@
     "      results[\"test_acc\"].append(test_acc)\n",
     "\n",
     "  return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "train() missing 7 required positional arguments: 'model', 'train_dataloader', 'test_dataloader', 'optimizer', 'loss_fn', 'epochs', and 'device'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/stanley/Documents/shidder/ml/pytorching/pytorch_modules/main.ipynb Cell 9\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/stanley/Documents/shidder/ml/pytorching/pytorch_modules/main.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmodules\u001b[39;00m \u001b[39mimport\u001b[39;00m train_engine\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/stanley/Documents/shidder/ml/pytorching/pytorch_modules/main.ipynb#X11sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m train_engine\u001b[39m.\u001b[39;49mtrain()\n",
+      "\u001b[0;31mTypeError\u001b[0m: train() missing 7 required positional arguments: 'model', 'train_dataloader', 'test_dataloader', 'optimizer', 'loss_fn', 'epochs', and 'device'"
+     ]
+    }
+   ],
+   "source": [
+    "from modules import train_engine\n",
+    "train_engine.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing modules/train.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile modules/train.py\n",
+    "import os\n",
+    "\n",
+    "from timeit import default_timer as timer\n",
+    "\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "from torchvision import transforms\n",
+    "import data_preprocess, train_engine, build_model\n",
+    "\n",
+    "import argparse #turn thesevraible into positional arguemnet flags!\n",
+    "\n",
+    "NUM_EPOCHS = 5\n",
+    "BATCH_SIZE = 32\n",
+    "HIDDEN_UNITS = 10\n",
+    "LEARNING_RATE = 0.001\n",
+    "\n",
+    "#setup dir\n",
+    "train_dir = \"data/pizza_steak_sushi/train\"\n",
+    "test_dir = \"data/pizza_steak_sushi/test\"\n",
+    "\n",
+    "#estup direvice agnostic ccode\n",
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "\n",
+    "#create trasfomrs\n",
+    "data_transform = transforms.Compose([\n",
+    "    transforms.Resize(size=(64,64)),\n",
+    "    transforms.ToTensor()\n",
+    "])\n",
+    "\n",
+    "#create data loaders and get class_names\n",
+    "train_dataloader, test_dataloader, class_names = data_preprocess.create_dataloaders(\n",
+    "    train_dir=train_dir,\n",
+    "    test_dir=test_dir,\n",
+    "    transform=transforms,\n",
+    "    batch_size=BATCH_SIZE\n",
+    ")\n",
+    "\n",
+    "#create the model\n",
+    "model = build_model.TinyVGG(input_shape=3,\n",
+    "                              hidden_units=HIDDEN_UNITS,\n",
+    "                              output_shape = len(class_names)).to(device)\n",
+    "#setup loss and optimizer\n",
+    "loss_fn = nn.CrossEntropyLoss()\n",
+    "optimizer = torch.optim.Adam(model.parameters(),\n",
+    "                             lr=LEARNING_RATE)\n",
+    "#start timer\n",
+    "start_time = timer()\n",
+    "\n",
+    "#start training with help from engine.py\n",
+    "train_engine.train(model=model,\n",
+    "             train_dataloader=train_dataloader,\n",
+    "             test_dataloader=test_dataloader,\n",
+    "             loss_fn=loss_fn,\n",
+    "             optimizer=optimizer,\n",
+    "             epochs=NUM_EPOCHS,\n",
+    "             device=device)\n",
+    "\n",
+    "end_time = timer()\n",
+    "print(f\"[INFO] total training time: {end_time-start_time:.3f} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0%|                                                     | 0/5 [00:00<?, ?it/s]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/stanley/Documents/shidder/ml/pytorching/pytorch_modules/modules/train.py\", line 50, in <module>\n",
+      "    train_engine.train(model=model,\n",
+      "  File \"/home/stanley/Documents/shidder/ml/pytorching/pytorch_modules/modules/train_engine.py\", line 68, in train\n",
+      "    train_loss, train_acc = train_step(model=model,\n",
+      "                            ^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/stanley/Documents/shidder/ml/pytorching/pytorch_modules/modules/train_engine.py\", line 15, in train_step\n",
+      "    for batch, (X, y) in enumerate(dataloader):\n",
+      "  File \"/usr/lib/python3.11/site-packages/torch/utils/data/dataloader.py\", line 633, in __next__\n",
+      "    data = self._next_data()\n",
+      "           ^^^^^^^^^^^^^^^^^\n",
+      "  File \"/usr/lib/python3.11/site-packages/torch/utils/data/dataloader.py\", line 1345, in _next_data\n",
+      "    return self._process_data(data)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/usr/lib/python3.11/site-packages/torch/utils/data/dataloader.py\", line 1371, in _process_data\n",
+      "    data.reraise()\n",
+      "  File \"/usr/lib/python3.11/site-packages/torch/_utils.py\", line 644, in reraise\n",
+      "    raise exception\n",
+      "TypeError: Caught TypeError in DataLoader worker process 0.\n",
+      "Original Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python3.11/site-packages/torch/utils/data/_utils/worker.py\", line 308, in _worker_loop\n",
+      "    data = fetcher.fetch(index)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/usr/lib/python3.11/site-packages/torch/utils/data/_utils/fetch.py\", line 51, in fetch\n",
+      "    data = [self.dataset[idx] for idx in possibly_batched_index]\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/usr/lib/python3.11/site-packages/torch/utils/data/_utils/fetch.py\", line 51, in <listcomp>\n",
+      "    data = [self.dataset[idx] for idx in possibly_batched_index]\n",
+      "            ~~~~~~~~~~~~^^^^^\n",
+      "  File \"/usr/lib/python3.11/site-packages/torchvision/datasets/folder.py\", line 231, in __getitem__\n",
+      "    sample = self.transform(sample)\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^\n",
+      "TypeError: 'module' object is not callable\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python modules/train.py"
    ]
   }
  ],
