--- a/main.ipynb
+++ b/main.ipynb
@@ -191,70 +191,129 @@
    ],
    "source": [
     "%%writefile modules/build_model.py\n",
+    "\"\"\"\n",
+    "make model arch here\n",
+    "\"\"\"\n",
     "import torch\n",
+    "\n",
     "from torch import nn\n",
     "\n",
-    "class ModelName(nn.Module):\n",
-    "    def __init(self):\n",
+    "class TinyVGG(nn.Module):\n",
+    "    \"\"\"creates tinyvgg\n",
+    "    \"\"\"\n",
+    "    def __init__(self, input_shape: int, hidden_units: int, output_shape: int) -> None:\n",
     "        super().__init__()\n",
-    "        \n",
-    "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
-    "        x = None\n",
-    "        return x"
+    "        self.conv_block_1 = nn.Sequential(\n",
+    "          nn.Conv2d(in_channels=input_shape, \n",
+    "                    out_channels=hidden_units, \n",
+    "                    kernel_size=3, \n",
+    "                    stride=1, \n",
+    "                    padding=0),  \n",
+    "          nn.ReLU(),\n",
+    "          nn.Conv2d(in_channels=hidden_units, \n",
+    "                    out_channels=hidden_units,\n",
+    "                    kernel_size=3,\n",
+    "                    stride=1,\n",
+    "                    padding=0),\n",
+    "          nn.ReLU(),\n",
+    "          nn.MaxPool2d(kernel_size=2,\n",
+    "                        stride=2)\n",
+    "        )\n",
+    "        self.conv_block_2 = nn.Sequential(\n",
+    "          nn.Conv2d(hidden_units, hidden_units, kernel_size=3, padding=0),\n",
+    "          nn.ReLU(),\n",
+    "          nn.Conv2d(hidden_units, hidden_units, kernel_size=3, padding=0),\n",
+    "          nn.ReLU(),\n",
+    "          nn.MaxPool2d(2)\n",
+    "        )\n",
+    "        self.classifier = nn.Sequential(\n",
+    "          nn.Flatten(),\n",
+    "          nn.Linear(in_features=hidden_units*13*13,\n",
+    "                    out_features=output_shape)\n",
+    "        )\n",
+    "    \n",
+    "    def forward(self, x: torch.Tensor):\n",
+    "        return self.classifier(self.block_2(self.block_1(x))) #leverages the benefits of operator fusion"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing modules/train_engine.py\n"
+      "Overwriting modules/train_engine.py\n"
      ]
     }
    ],
    "source": [
-    "%%writefile modules/train_engine.py \n",
+    "%%writefile modules/train_engine.py\n",
+    "\"\"\"\n",
+    "training and testing model\n",
+    "\"\"\"\n",
+    "from typing import Dict, List, Tuple\n",
     "\n",
-    "from typing import Tuple, Dict, List\n",
     "import torch\n",
+    "\n",
     "from tqdm.auto import tqdm\n",
-    "  \n",
+    "\n",
     "def train_step(model: torch.nn.Module, \n",
-    "            dataloader: torch.utils.data.DataLoader, \n",
-    "            loss_fn: torch.nn.Module, \n",
-    "            optimizer: torch.optim.Optimizer,\n",
-    "            device: torch.device) -> Tuple[float, float]:\n",
-    "  \n",
-    "  model.train()\n",
-    "  train_loss, train_acc = 0, 0\n",
+    "               dataloader: torch.utils.data.DataLoader, \n",
+    "               loss_fn: torch.nn.Module, \n",
+    "               optimizer: torch.optim.Optimizer,\n",
+    "               device: torch.device) -> Tuple[float, float]:\n",
+    "    \"\"\"trains models for a single epoch\n",
     "\n",
-    "  for batch, (X, y) in enumerate(dataloader):\n",
+    "    Args:\n",
+    "    model: .pth model\n",
+    "    dataloader: datalodaer\n",
+    "    loss_fn: nn.loss\n",
+    "    optimizer: torch.optim\n",
+    "    device: cpu or cuda\n",
     "\n",
-    "      X, y = X.to(device), y.to(device)\n",
-    "      y_pred = model(X)\n",
-    "      loss = loss_fn(y_pred, y)\n",
-    "      train_loss += loss.item() \n",
-    "      optimizer.zero_grad()\n",
-    "      loss.backward()\n",
-    "      optimizer.step()\n",
-    "      y_pred_class = torch.argmax(torch.softmax(y_pred, dim=1), dim=1)\n",
-    "      train_acc += (y_pred_class == y).sum().item()/len(y_pred)\n",
-    " \n",
-    "  train_loss = train_loss / len(dataloader)\n",
-    "  train_acc = train_acc / len(dataloader)\n",
-    "  return train_loss, train_acc\n",
+    "    Returns:\n",
+    "    Tuple(train_loss, train_acc)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    model.train()\n",
+    "    train_loss, train_acc = 0, 0\n",
+    "    for batch, (X, y) in enumerate(dataloader):\n",
+    "\n",
+    "        X, y = X.to(device), y.to(device)\n",
+    "        y_pred = model(X)\n",
+    "        loss = loss_fn(y_pred, y)\n",
+    "        train_loss += loss.item() \n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        y_pred_class = torch.argmax(torch.softmax(y_pred, dim=1), dim=1)\n",
+    "        train_acc += (y_pred_class == y).sum().item()/len(y_pred)\n",
+    "\n",
+    "    train_loss = train_loss / len(dataloader)\n",
+    "    train_acc = train_acc / len(dataloader)\n",
+    "    return train_loss, train_acc\n",
     "\n",
     "def test_step(model: torch.nn.Module, \n",
     "              dataloader: torch.utils.data.DataLoader, \n",
     "              loss_fn: torch.nn.Module,\n",
     "              device: torch.device) -> Tuple[float, float]:\n",
-    "    test_loss, test_acc = 0, 0\n",
-    "    model.eval() \n",
+    "    \"\"\"test models for a single epoch\n",
     "\n",
+    "    Args:\n",
+    "    model: .pth model\n",
+    "    dataloader: datalodaer\n",
+    "    loss_fn: nn.loss\n",
+    "    optimizer: torch.optim\n",
+    "    device: cpu or cuda\n",
+    "\n",
+    "    Returns:\n",
+    "    Tuple(test_loss, test_acc)\n",
+    "    \"\"\"\n",
+    "    model.eval() \n",
+    "    test_loss, test_acc = 0, 0\n",
     "    with torch.inference_mode():\n",
     "\n",
     "        for batch, (X, y) in enumerate(dataloader):\n",
@@ -265,7 +324,7 @@
     "            test_loss += loss.item()\n",
     "            test_pred_labels = test_pred_logits.argmax(dim=1)\n",
     "            test_acc += ((test_pred_labels == y).sum().item()/len(test_pred_labels))\n",
-    "            \n",
+    "\n",
     "    test_loss = test_loss / len(dataloader)\n",
     "    test_acc = test_acc / len(dataloader)\n",
     "    return test_loss, test_acc\n",
@@ -277,38 +336,55 @@
     "          loss_fn: torch.nn.Module,\n",
     "          epochs: int,\n",
     "          device: torch.device) -> Dict[str, List[float]]:\n",
+    "    \"\"\"trains and tests model\n",
     "\n",
-    "  results = {\"train_loss\": [],\n",
-    "      \"train_acc\": [],\n",
-    "      \"test_loss\": [],\n",
-    "      \"test_acc\": []\n",
-    "  }\n",
-    "  \n",
-    "  for epoch in tqdm(range(epochs)):\n",
-    "      train_loss, train_acc = train_step(model=model,\n",
+    "    Args:\n",
+    "    model: .pth model\n",
+    "    train_dataloader: dataloader\n",
+    "    test_dataloader: dataloader\n",
+    "    loss_fn: nn.loss\n",
+    "    optimizer: torch.optim\n",
+    "    epochs: \n",
+    "    device: cpu or cuda\n",
+    "\n",
+    "    Returns:\n",
+    "    results = {\"train_loss\": [],\n",
+    "               \"train_acc\": [],\n",
+    "               \"test_loss\": [],\n",
+    "               \"test_acc\": []\n",
+    "    }\n",
+    "    \"\"\"\n",
+    "    results = {\"train_loss\": [],\n",
+    "               \"train_acc\": [],\n",
+    "               \"test_loss\": [],\n",
+    "               \"test_acc\": []\n",
+    "    }\n",
+    "\n",
+    "    for epoch in tqdm(range(epochs)):\n",
+    "        train_loss, train_acc = train_step(model=model,\n",
     "                                          dataloader=train_dataloader,\n",
     "                                          loss_fn=loss_fn,\n",
     "                                          optimizer=optimizer,\n",
     "                                          device=device)\n",
-    "      test_loss, test_acc = test_step(model=model,\n",
+    "        test_loss, test_acc = test_step(model=model,\n",
     "          dataloader=test_dataloader,\n",
     "          loss_fn=loss_fn,\n",
     "          device=device)\n",
-    "      \n",
-    "      print(\n",
+    "\n",
+    "        print(\n",
     "          f\"Epoch: {epoch+1} | \"\n",
     "          f\"train_loss: {train_loss:.4f} | \"\n",
     "          f\"train_acc: {train_acc:.4f} | \"\n",
     "          f\"test_loss: {test_loss:.4f} | \"\n",
     "          f\"test_acc: {test_acc:.4f}\"\n",
-    "      )\n",
+    "        )\n",
     "\n",
-    "      results[\"train_loss\"].append(train_loss)\n",
-    "      results[\"train_acc\"].append(train_acc)\n",
-    "      results[\"test_loss\"].append(test_loss)\n",
-    "      results[\"test_acc\"].append(test_acc)\n",
+    "        results[\"train_loss\"].append(train_loss)\n",
+    "        results[\"train_acc\"].append(train_acc)\n",
+    "        results[\"test_loss\"].append(test_loss)\n",
+    "        results[\"test_acc\"].append(test_acc)\n",
     "\n",
-    "  return results"
+    "    return results\n"
    ]
   },
   {
