--- a/main.ipynb
+++ b/main.ipynb
@@ -178,14 +178,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing modules/build_model.py\n"
+      "Overwriting modules/build_model.py\n"
      ]
     }
    ],
@@ -411,69 +411,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing modules/train.py\n"
+      "Writing modules/utils.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile modules/utils.py \n",
+    "\"\"\"\n",
+    "utils for saving\n",
+    "\"\"\"\n",
+    "from pathlib import Path\n",
+    "\n",
+    "import torch\n",
+    "\n",
+    "def save_model(model: torch.nn.Module,\n",
+    "               target_dir: str,\n",
+    "               model_name: str):\n",
+    "    \"\"\"saves .pth model to dir\n",
+    "\n",
+    "    args:\n",
+    "    model: .pth model.\n",
+    "    target_dir: target_dir.\n",
+    "    model_name: \"model_name.pth\"\n",
+    "\n",
+    "    example:\n",
+    "    save_model(model=model_0,\n",
+    "               target_dir=\"models\",\n",
+    "               model_name=\"dummy_model.pth\")\n",
+    "    \"\"\"\n",
+    "    # Create target directory\n",
+    "    target_dir_path = Path(target_dir)\n",
+    "    target_dir_path.mkdir(parents=True,\n",
+    "                        exist_ok=True)\n",
+    "\n",
+    "    # Create model save path\n",
+    "    assert model_name.endswith(\".pth\") or model_name.endswith(\".pt\"), \"model_name should end with '.pt' or '.pth'\"\n",
+    "    model_save_path = target_dir_path / model_name\n",
+    "\n",
+    "    # Save the model state_dict()\n",
+    "    print(f\"[INFO] Saving model to: {model_save_path}\")\n",
+    "    torch.save(obj=model.state_dict(),\n",
+    "             f=model_save_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting modules/train.py\n"
      ]
     }
    ],
    "source": [
     "%%writefile modules/train.py\n",
+    "\"\"\"\n",
+    "trains a model\n",
+    "\"\"\"\n",
+    "\n",
     "import os\n",
-    "\n",
-    "from timeit import default_timer as timer\n",
-    "\n",
     "import torch\n",
-    "from torch import nn\n",
     "from torchvision import transforms\n",
-    "import data_preprocess, train_engine, build_model\n",
+    "import data_setup, engine, model_builder, utils\n",
     "\n",
-    "import argparse #turn thesevraible into positional arguemnet flags!\n",
     "\n",
+    "# Setup hyperparameters\n",
     "NUM_EPOCHS = 5\n",
     "BATCH_SIZE = 32\n",
     "HIDDEN_UNITS = 10\n",
     "LEARNING_RATE = 0.001\n",
     "\n",
-    "#setup dir\n",
+    "# Setup directories\n",
     "train_dir = \"data/pizza_steak_sushi/train\"\n",
     "test_dir = \"data/pizza_steak_sushi/test\"\n",
     "\n",
-    "#estup direvice agnostic ccode\n",
-    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "# Setup target device\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
-    "#create trasfomrs\n",
+    "# Create transforms\n",
     "data_transform = transforms.Compose([\n",
-    "    transforms.Resize(size=(64,64)),\n",
-    "    transforms.ToTensor()\n",
+    "  transforms.Resize((64, 64)),\n",
+    "  transforms.ToTensor()\n",
     "])\n",
     "\n",
-    "#create data loaders and get class_names\n",
-    "train_dataloader, test_dataloader, class_names = data_preprocess.create_dataloaders(\n",
+    "# Create DataLoaders with help from data_setup.py\n",
+    "train_dataloader, test_dataloader, class_names = data_setup.create_dataloaders(\n",
     "    train_dir=train_dir,\n",
     "    test_dir=test_dir,\n",
-    "    transform=transforms,\n",
+    "    transform=data_transform,\n",
     "    batch_size=BATCH_SIZE\n",
     ")\n",
     "\n",
-    "#create the model\n",
-    "model = build_model.TinyVGG(input_shape=3,\n",
-    "                              hidden_units=HIDDEN_UNITS,\n",
-    "                              output_shape = len(class_names)).to(device)\n",
-    "#setup loss and optimizer\n",
-    "loss_fn = nn.CrossEntropyLoss()\n",
+    "# Create model with help from model_builder.py\n",
+    "model = model_builder.TinyVGG(\n",
+    "    input_shape=3,\n",
+    "    hidden_units=HIDDEN_UNITS,\n",
+    "    output_shape=len(class_names)\n",
+    ").to(device)\n",
+    "\n",
+    "# Set loss and optimizer\n",
+    "loss_fn = torch.nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(),\n",
     "                             lr=LEARNING_RATE)\n",
-    "#start timer\n",
-    "start_time = timer()\n",
     "\n",
-    "#start training with help from engine.py\n",
-    "train_engine.train(model=model,\n",
+    "# Start training with help from engine.py\n",
+    "engine.train(model=model,\n",
     "             train_dataloader=train_dataloader,\n",
     "             test_dataloader=test_dataloader,\n",
     "             loss_fn=loss_fn,\n",
@@ -481,8 +534,10 @@
     "             epochs=NUM_EPOCHS,\n",
     "             device=device)\n",
     "\n",
-    "end_time = timer()\n",
-    "print(f\"[INFO] total training time: {end_time-start_time:.3f} seconds\")"
+    "# Save the model with help from utils.py\n",
+    "utils.save_model(model=model,\n",
+    "                 target_dir=\"models\",\n",
+    "                 model_name=\"dummy_model.pth\")\n"
    ]
   },
   {
