--- a/main.ipynb
+++ b/main.ipynb
@@ -590,6 +590,96 @@
    "source": [
     "!python modules/train.py"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\"\"\"\n",
+    "functions to make predictions.\n",
+    "\n",
+    "refernce https://www.learnpytorch.io/06_pytorch_transfer_learning/#6-make-predictions-on-images-from-the-test-set \n",
+    "\"\"\"\n",
+    "import torch\n",
+    "import torchvision\n",
+    "from torchvision import transforms\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from typing import List, Tuple\n",
+    "\n",
+    "from PIL import Image\n",
+    "\n",
+    "# set device\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "\n",
+    "# predict on a target image with a target model\n",
+    "def pred_and_plot_image(\n",
+    "    model: torch.nn.Module,\n",
+    "    class_names: List[str],\n",
+    "    image_path: str,\n",
+    "    image_size: Tuple[int, int] = (224, 224),\n",
+    "    transform: torchvision.transforms = None,\n",
+    "    device: torch.device = device,\n",
+    "):\n",
+    "    \"\"\"predicts target image \n",
+    "\n",
+    "    Args:\n",
+    "        model (torch.nn.Module): model instance.\n",
+    "        class_names (List[str]): list[].\n",
+    "        image_path (str): path.\n",
+    "        image_size (Tuple[int, int], optional): size of image. defaults to (224, 224).\n",
+    "        transform (torchvision.transforms, optional): transforms to perform, defults to imagemet transforms.\n",
+    "        device (torch.device, optional): target device. defaults to device.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # open image\n",
+    "    img = Image.open(image_path)\n",
+    "\n",
+    "    # create transformation for image (if one doesn't exist)\n",
+    "    if transform is not None:\n",
+    "        image_transform = transform\n",
+    "    else:\n",
+    "        image_transform = transforms.Compose(\n",
+    "            [\n",
+    "                transforms.Resize(image_size),\n",
+    "                transforms.ToTensor(),\n",
+    "                transforms.Normalize(\n",
+    "                    mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]\n",
+    "                ),\n",
+    "            ]\n",
+    "        )\n",
+    "\n",
+    "    ### predict on image ###\n",
+    "\n",
+    "    # make sure the model is on the target device\n",
+    "    model.to(device)\n",
+    "\n",
+    "    # turn on model evaluation mode and inference mode\n",
+    "    model.eval()\n",
+    "    with torch.inference_mode():\n",
+    "        # transform and add an extra dimension to image (model requires samples in [batch_size, color_channels, height, width])\n",
+    "        transformed_image = image_transform(img).unsqueeze(dim=0)\n",
+    "\n",
+    "        # make a prediction on image with an extra dimension and send it to the target device\n",
+    "        target_image_pred = model(transformed_image.to(device))\n",
+    "\n",
+    "    # convert logits -> prediction probabilities (using torch.softmax() for multi-class classification)\n",
+    "    target_image_pred_probs = torch.softmax(target_image_pred, dim=1)\n",
+    "\n",
+    "    # convert prediction probabilities -> prediction labels\n",
+    "    target_image_pred_label = torch.argmax(target_image_pred_probs, dim=1)\n",
+    "\n",
+    "    # plot image with predicted label and probability\n",
+    "    plt.figure()\n",
+    "    plt.imshow(img)\n",
+    "    plt.title(\n",
+    "        f\"Pred: {class_names[target_image_pred_label]} | Prob: {target_image_pred_probs.max():.3f}\"\n",
+    "    )\n",
+    "    plt.axis(False)\n"
+   ]
   }
  ],
  "metadata": {
