add create writer

--- a/main.ipynb
+++ b/main.ipynb
@@ -593,11 +593,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing modules/prediction.py\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "%%writefile modules/prediction.py \n",
     "\"\"\"\n",
     "functions to make predictions.\n",
     "\n",
